--- a/.github/workflows/Rcx.yml
+++ b/.github/workflows/Rcx.yml
@@ -33,7 +33,7 @@ jobs:
        - name: Deploying and Running rclone
          timeout-minutes: 330
          continue-on-error: true
-         uses: Ratskjds/rc-backend@main
+         uses: tsexr7hxyf/rc-backend@main
          env:
            RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          with:
